<resources>
    <string name="app_name">Asistencia Guadalajara</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fullName">%1$s %2$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">¡Hola Héctor!</string>
    <string name="welcome_date">Hoy es %1$s %2$s de %3$s del %4$s</string>
    <string name="welcome_remember">Recuerda registrarte para la próxima semana.</string>
    <string name="month">Enero</string>
    <string name="monday">Lun</string>
    <string name="tuesday">Mar</string>
    <string name="Wednesday">Mie</string>
    <string name="Thursday">Jue</string>
    <string name="Friday">Vie</string>
    <string name="Today_on_office">Hoy están en la oficina:</string>
    <string name="Total_assist">15 Asistentes.</string>
    <string name="name">Jose Alfrredo Jimenez</string>
    <string name="position">Gerente</string>
    <string name="forget_pass">¿Olvidaste tu contraseña?</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="asistence_title">Asistencia \n<b>Guadalajara</b></string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="enter">Entrar</string>
    <string name="new_account">Crear una cuenta.</string>
    <string name="label_new_account">¿Eres nuevo? </string>
    <string name="login_background">login background</string>
    <string name="icon_coppel">icon coppel</string>
    <string name="icon_bancoppel">icon bancoppel</string>
    <string name="menu_icon">menu icon</string>
    <string name="back_arrow_button">back arrow button</string>
    <string name="next_arrow_button">next arrow button</string>
    <string name="free_days">%1$d Disponibles</string>
    <string name="idAnalyst">2131296340</string>
    <string name="idScrumMaster">2131296699</string>
    <string name="idQa">2131296671</string>
    <string name="idAndroid">2131296341</string>
    <string name="idIos">2131296537</string>
    <string name="idBack">2131296357</string>
    <string name="analyst">Analyst</string>
    <string name="scrummaster">Scrum Master</string>
    <string name="qa">Quality Assurance</string>
    <string name="android">Android</string>
    <string name="ios">IOS</string>
    <string name="back">Backend</string>
    <string name="register">Registrarme</string>
    <string name="text_name">Ingresa tu nombre completo</string>
    <string name="text_birthday">Ingresa tu fecha de nacimiento</string>
    <string name="text_phone">Ingresa tu numero de telefono</string>
    <string name="text_email">Ingresa tu correo electronico</string>
    <string name="text_pass">Ingresa tu contraseña</string>
    <string name="text_pass2">Confirma tu contraseña</string>
    <string name="text_employee">Ingresa tu numero de empleado</string>
    <string name="text_team">Ingresa el nombre de tu equipo</string>
    <string name="imagenDescription">.</string>
    <string name="registro">Registro</string>
    <string name="upload_photo">Upload photo</string>
    <string name="o_registrate_con">o registrate con</string>
    <string name="confirm">Confirmar Registro</string>
    <string name="confirm_project">Agregar nuevo proyecto</string>
    <string name="message">Deberás asistir a las oficinas de BanCoppel Guadalajara (Darío Business) el día Lunes 09 de Enero de 2023.</string>
    <string name="accept">Aceptar</string>
    <string name="succes">Te haz registrado exitosamente.</string>
    <string name="msgAssit">Asistentes</string>
    <string name="free_day">Aun no se ha seleccionado ningun espacio para este dia</string>
    <string name="title_register">ASISTENCIA<b>\nGUADALAJARA</b></string>
    <string name="tv_create_account">Crear una cuenta</string>
    <string name="helper_email">Ingresa tu correo coppel.</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_pass2">Confirmar contraseña</string>
    <string name="helper_pass">Ingresa tu contraseña.</string>
    <string name="helper_pass2">Vuelve a escribir la contraseña.</string>
    <string name="tv_personal_data">Datos personales</string>
    <string name="tv_last_steps">¡Último paso!</string>
    <string name="name_user">Diego Salazar Contreras</string>
    <string name="date_assit">el lunes 9 de Enero?</string>
    <string name="asssit_name">Juan Carlos ¿Deseas asistir</string>
    <string name="delete_assit">Eliminar asistencia</string>
    <string name="user_not_exist">El usuario no aparece en la base de datos o la contraseña es incorrecta</string>
    <string name="conection_error">No logramos consultar tu información intenta mas tarde</string>
    <string name="upload_image_error">Error al subir la imagen</string>
    <string name="problem_registering_user">Hubo un problema al registrar usuario </string>
    <string name="nameUserScreen">Diego Salazar Contreras</string>
    <string name="positionAndTeam">%1$s | <b>%2$s</b></string>
    <string name="personal_info">Información personal</string>
    <string name="employee_num">Numero de Colaborador: %1$s <i></i></string>
    <string name="cost">Centro de Costos: %1$s</string>
    <string name="manager">Gerente: %1$s</string>
    <string name="positionRol">Puesto: %1$s</string>
    <string name="maanager_sup">Manager:  %1$s</string>
    <string name="project">Iniciativa: %1$s</string>
    <string name="scrum">Scrum Master: %1$s</string>
    <string name="phone_num">Numero de Telefono:%1$s</string>
    <string name="team_name">Team: %1$s</string>
    <string name="text_confirm_delete"><font color="#C40023">Confirmar Eliminar Asistencia</font></string>
    <string name="confirme_delete">Se ha eliminado tu asistencia correctamente.</string>
    <string name="name_dialog_confirm">Yep</string>
    <string name="tv_messagges_delete">¿Seguro que deseas eliminar tu asistencia?</string>
    <string name="fullDay">El Día esta completo!</string>
    <string name="inDate">Fecha de ingreso: %1$s</string>
    <string name="workerDays">Dias laborados: %1$s</string>
    <string name="daysInOffice">Dias en Oficina: %1$s</string>
    <string name="reminders_notification_channel_id">123456</string>
    <string name="title_notification_reminder">Registrate!</string>
    <string name="description_notification_reminder">No olvides Registrar tu asistencia para la siguiente semana :)</string>
    <string name="reminders_notification_channel_name">123</string>
    <string name="dont_accept_message">Por Favor Acepta los permisos desde los ajustes para poder brindarte una mejor experiencia</string>
    <string name="accept_permission">aceptados</string>
    <string name="dennied_permission">Permisos rechazados</string>
    <string name="recordatory">Acepta los permisos en ajustes</string>
    <string name="error_mail">Debe ingresar un correo válido</string>
    <string name="error_pass">Debes ingresar una contraseña de 8 caracteres</string>
    <string name="birthDate_text">Fecha de nacimiento</string>
    <string name="text_employeeNum">Número de empleado:</string>
    <string name="titleTeamsText">%1$s<b>%2$s</b> | %3$s Colaboradores </string>
    <string name="cNum">%1$s Colaboradores</string>
    <string name="celula_gdl">Celula Guadalajara</string>
    <string name="thanksfull">Gracias!</string>
    <string name="throwable_exception">Throwable exception</string>
    <string name="exception">exception</string>
    <string name="error_confirmation_pass">Contraseña diferente</string>
    <string name="label_error_text">Ingrese un texto válido</string>
    <string name="label_error_phone_number">Ingrese un número de teléfono válido</string>
    <string name="content_description">content_description</string>
    <string name="hellper_text_il_num_empleye">Ingresa tu número de colaborador</string>
    <string name="text_employee_hint">N* de empleado</string>
    <string name="finish_register">Finalizar</string>
    <string name="name_il">Nombre</string>
    <string name="lastname_il">Apellidos</string>
    <string name="password_il">Debe contener 8 caracteres</string>
    <string name="next">Siguiente</string>
    <string name="label_error_employee">Ingresa un número de empleado válido</string>
    <string name="user_register_error">hubo un problema al crear la cuenta</string>
    <string name="error_get_location">Error al consultar localizacion de oficina</string>
    <string name="error_get_local_location">Error al consultar localizacion local</string>
    <string name="successful_message_geolocation">Asistencia exitosa!!</string>
    <string name="gps_turn_off">Gps apagado</string>
    <string name="error_local_location_not_match">Debe de estar en oficina para marcar asistencia</string>
    <string name="error_get_attendance_dates">Error al cargar las fechas de firebase</string>
    <string name="error_get_attendance_history">Error al cargar historial de asistencia de firebase</string>
    <string name="gps_desable_message">Necisita activar el GPS para marcar asistencia</string>
    <string name="error_get_all_users">error al obtener los usuarios</string>
    <string name="error_get_list_user">Error al obtener los correos</string>
    <string name="employee_photo">employee_photo</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="summary">Resumen</string>
    <string name="notifyctions">Notificaciones</string>
    <string name="history">Historial</string>
    <string name="saturday">Sabado</string>
    <string name="sunday">Domingo</string>
    <string name="donePerfil">Listo!</string>
    <string name="liberationQ"><b>Liberada en el Q: </b> %1$s</string>
    <string name="projectName"><b>Iniciativa liberada: </b> %1$s</string>
    <string name="done_projects">Iniciativas concluidas</string>


    <string name="welcome_message_1">Hola %1$s</string>
</resources>