<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_main"
        app:cardCornerRadius="@dimen/dp30"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp300"
        android:elevation="16dp"
        android:backgroundTint="@color/white"
        android:background="@color/black20"
        android:visibility="visible">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/user_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cardCornerRadius="@dimen/dp40"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16">
            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/dp80"
                android:layout_height="@dimen/dp80"
                android:src="@color/blue_app"
                android:contentDescription="@string/project"
                />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tv_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/user_photo"
                app:layout_constraintTop_toTopOf="@id/user_photo"
                app:layout_constraintBottom_toTopOf="@id/tv_position1"
                android:layout_marginStart="@dimen/dp8"
                android:textSize="@dimen/sp24"
                android:textStyle="bold"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/tv_position1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/user_photo"
                app:layout_constraintTop_toBottomOf="@id/tv_name1"
                app:layout_constraintBottom_toTopOf="@id/view_separation"
                android:layout_marginStart="@dimen/dp8"
                android:textSize="@dimen/sp22"
                android:textStyle="normal"
                android:text="@string/position"/>
            <View
                android:id="@+id/view_separation"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey7"
                app:layout_constraintTop_toBottomOf="@id/tv_position1"
                app:layout_constraintBottom_toTopOf="@id/cl_information"
                android:layout_marginTop="@dimen/dp32"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_information"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/view_separation"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="@dimen/dp16">
                <TextView
                    android:id="@+id/tv_colaborator_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_num"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tv_phoneNumber"
                    android:textSize="@dimen/sp20"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/tv_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_num"
                    app:layout_constraintTop_toBottomOf="@id/tv_colaborator_num"
                    app:layout_constraintBottom_toBottomOf="@id/tv_team"
                    android:textSize="@dimen/sp20"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tv_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_phoneNumber"
                    app:layout_constraintBottom_toTopOf="@id/tv_birth"
                    android:textSize="@dimen/sp20"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tv_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project"
                    app:layout_constraintTop_toBottomOf="@id/tv_team"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="@dimen/sp20"
                    android:gravity="center"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>