<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainCard"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayCoppel"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.team.TeamMainFragment"
    >
    <ProgressBar
        android:id="@+id/progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="@dimen/dp100"
        android:layout_height="@dimen/dp100"
        android:indeterminate="true"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sv_team"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">
            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="82dp"
                android:layout_height="15dp"
                android:src="@drawable/derecho"
                android:layout_marginTop="41dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/icon_bancoppel"
                app:tint="@color/blueCoppel" />
            <TextView
                android:id="@+id/tv_title_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_menu_icon"
                android:layout_marginTop="@dimen/dp16"
                android:gravity="start"
                android:textColor="@color/grey2"
                android:textStyle="bold"
                android:textSize="@dimen/sp28"
                android:text="@string/celula_gdl"
                />
            <ImageView
                android:id="@+id/tv_menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="@id/tv_title_team"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/grey1"
                android:src="@drawable/ic_baseline_menu_24"
                android:contentDescription="@string/menu_icon"
                app:tint="@color/blueCoppel"/>
            <TextView
                android:id="@+id/tv_colaboratorCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cNum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_team"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/sv_team"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/dp8"
        android:layout_marginTop="@dimen/dp8"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_teams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/team_view"
            android:isScrollContainer="false"
            android:focusableInTouchMode="false"
            />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>